--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,6 +2,15 @@ $color-primary1: #11d4b6;
 $color-primary2: #19b59d;;
 $color-primary3: #1b9e8a;
 
+.textareatemp {
+  resize: none;
+  border: none;
+  text-align: center;
+  overflow-y: hidden;
+  font-size: 3rem;
+  height: 1rem
+}
+
 .container {
   position: absolute;
   top: 50%;
@@ -44,8 +53,8 @@ $color-primary3: #1b9e8a;
 
   & textarea {
     width: 100%;
-    max-height: 3rem;
     background-color: inherit;
+    font-size: 0.9rem;
     resize: none;
     border: none;
     text-align: center;
@@ -53,6 +62,16 @@ $color-primary3: #1b9e8a;
 
     &:focus {
       outline: none;
+    }
+
+    &.line-1 {
+      height: 1.2rem;
+    }
+    &.line-2 {
+      height: 1.2rem * 2;
+    }
+    &.line-3 {
+      height: 1.2rem * 3;
     }
   }
 }
@@ -74,8 +93,4 @@ $color-primary3: #1b9e8a;
   &:active {
     background-color: $color-primary3;
   }
-}
-
-#main-title {
-  color: white;
 }
