--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -30,8 +30,6 @@ $color-primary3: #1b9e8a;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
-  width: 300px;
-  height: 300px;
   &:nth-of-type(5) {
     background-color: $color-primary1;
     font-weight: 600;
@@ -39,41 +37,32 @@ $color-primary3: #1b9e8a;
 }
 
 .cell {
+  width: 90px;
+  height: 90px;
   border: 0.5px solid #04022b;
-  position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
-  padding: 0px 5px;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.9rem;
+  
+  div[contenteditable] {
+    outline: none;
+    text-align: center;
+    width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+  }
+
+  div[contenteditable]:empty::before {
+    content: attr(data-placeholder);
+    color: rgb
+  }
 
   &:nth-of-type(5) {
     background-color: $color-primary1;;
     font-weight: 600;
-  }
-
-  & textarea {
-    width: 100%;
-    background-color: inherit;
-    font-size: 0.9rem;
-    resize: none;
-    border: none;
-    text-align: center;
-    overflow-y: hidden;
-
-    &:focus {
-      outline: none;
-    }
-
-    &.line-1 {
-      height: 1.2rem;
-    }
-    &.line-2 {
-      height: 1.2rem * 2;
-    }
-    &.line-3 {
-      height: 1.2rem * 3;
-    }
-  }
+  }  
 }
 
 .save-btn {
@@ -93,4 +82,9 @@ $color-primary3: #1b9e8a;
   &:active {
     background-color: $color-primary3;
   }
+}
+
+#main-title {
+  background-color: $color-primary3;
+  font-size: 1.1rem;
 }
