--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,6 +1,6 @@
-$color-primary1: #ff9100;
+$color-primary1: #ffc880;
 $color-primary2: #9d4edd;
-$color-primary3: #3c096c;
+$color-primary3: #5a189a;
 $font-color: #f8f4f8;
 $deep-color: #24224b;
 
